--- a/.github/workflows/run_gametest.yml
+++ b/.github/workflows/run_gametest.yml
@@ -26,7 +26,7 @@ jobs:
           cache: gradle
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Build with Gradle
+      - name: Runs gametest
         run: ./gradlew runGameTest
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
