* Added gametests for recipe registration and recipe creation * There is currently only one overridden crafting recipe
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ loom {
             server()
             ideConfigGenerated project.rootProject == project
             name = "Testmod Server"
+
             source sourceSets.test
         }
         gametest {
@@ -121,6 +122,7 @@ loom {
             // Enable the gametest runner
             vmArg "-Dfabric-api.gametest"
             vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
+            vmArg "-Dfabric.log.level=warn"
             runDir "build/gametest"
         }
         autoTestServer {
