* Fixed some tests removing the structure block
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,14 @@ loom {
             name "Auto Test Server"
             vmArg "-Dfabric.autoTest"
         }
+
+        gametestClient {
+            inherit testmodServer
+            client()
+
+            name "test client"
+            //vmArg "-Dfabric.autoTest"
+        }
     }
 }
 
