--- a/.github/workflows/build_test_gradle.yml
+++ b/.github/workflows/build_test_gradle.yml
@@ -9,9 +9,9 @@ name: Build & Unit tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 1.* ]
   pull_request:
-    branches: [ master ]
+    branches: [ 1.* ]
 
 jobs:
   build:
