--- a/.github/workflows/run_gametest.yml
+++ b/.github/workflows/run_gametest.yml
@@ -9,9 +9,9 @@ name: Game Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 1.* ]
   pull_request:
-    branches: [ master ]
+    branches: [ 1.* ]
 
 jobs:
   gametest:
