Experimental support for 1.19
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
-loader_version=0.13.3
+minecraft_version=22w16b
+yarn_mappings=22w16b+build.7
+loader_version=0.14.2
 # Mod Properties
-mod_version=1.18.2-ALPHA-0.4.3
+mod_version=22w15a-ALPHA-0.4.3
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
-fabric_version=0.51.1+1.18.2
+fabric_version=0.51.2+1.19
