--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
 plugins {
-    id 'fabric-loom' version '0.10-SNAPSHOT'
+    id "fabric-loom" version "0.11.33"
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -67,13 +65,9 @@ jar {
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            from components.java
             // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+
         }
     }
 
