--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.3
-loader_version=0.13.3
+loader_version=0.14.6
 # Mod Properties
 mod_version=1.18.2-BETA-0.8.1
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
 fabric_version=0.51.1+1.18.2
+kubejs_version=1802.5.1-build.353
