--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,13 @@ group = project.maven_group
 repositories {
     mavenCentral()
 
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
+
     maven { url 'https://maven.blamejared.com' }
     maven {
         url = uri("https://storage.googleapis.com/devan-maven/")
@@ -36,6 +43,11 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "vazkii.patchouli:Patchouli:1.18.2-67-FABRIC"
     modImplementation("net.devtech:arrp:0.5.7")
+
+    //alloygery testing
+    modImplementation "curse.maven:alloygery-573592:3778894"
+    modImplementation "curse.maven:nbtcrafting-314633:3707208"
+
 
     include "net.devtech:arrp:0.5.7"
     // Fabric API. This is technically optional, but you probably want it anyway.
