--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.3
 loader_version=0.13.3
 # Mod Properties
-mod_version=1.18.2-BETA-0.8.4
+mod_version=1.18.2-BETA-0.9.0-pre-1
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
