--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.19-rc2
-yarn_mappings=1.19-rc2+build.1
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
 loader_version=0.14.6
 # Mod Properties
-mod_version=1.19.0-BETA-0.8.4
+mod_version=0.8.4-BETA-1.19.0
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
-fabric_version=0.55.1+1.19
+fabric_version=0.55.2+1.19
