Fixed crash loop on startup
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -38,12 +38,12 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation "vazkii.patchouli:Patchouli:1.18.2-67-FABRIC"
+    //modImplementation "vazkii.patchouli:Patchouli:1.19.2-67-FABRIC"
     modImplementation("net.devtech:arrp:0.6.2")
 
     //alloygery testing
-    modImplementation "curse.maven:alloygery-573592:3778894"
-    modImplementation "curse.maven:nbtcrafting-314633:3707208"
+    //modImplementation "curse.maven:alloygery-573592:3778894"
+    //modImplementation "curse.maven:nbtcrafting-314633:3707208"
 
     include "net.devtech:arrp:0.6.2"
     // Fabric API. This is technically optional, but you probably want it anyway.
