--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     modImplementation "vazkii.patchouli:Patchouli:1.18.2-67-FABRIC"
     modImplementation("net.devtech:arrp:0.5.7")
 
+    //continuity testing
+    //modImplementation "curse.maven:continuity-531351:3822250"
+
     //alloygery testing
     //modImplementation "curse.maven:alloygery-573592:3778894"
     //modImplementation "curse.maven:nbtcrafting-314633:3707208"
