--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,16 @@ repositories {
             includeGroup "curse.maven"
         }
     }
-
+    mavenLocal()
+    maven { url = "https://www.cursemaven.com" }
+    maven { url = "https://maven.shedaniel.me/" }
+    maven { url = "https://maven.terraformersmc.com/" }
+    maven { url = "https://maven.wispforest.io/" }
+    maven { url = "https://jitpack.io" }
+    maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url = "https://maven.cafeteria.dev" }
+    maven { url = "https://maven.jamieswhiteshirt.com/libs-release" }
+    maven { url = "https://api.modrinth.com/maven/" }
     maven { url 'https://maven.blamejared.com' }
     maven {
         url = uri("https://storage.googleapis.com/devan-maven/")
@@ -52,12 +61,19 @@ dependencies {
     //modImplementation "curse.maven:nbtcrafting-314633:3707208"
 
 
+    //mythicmetals testing
+    //modImplementation "curse.maven:alloy-forgery-438718:3758381"
+    //modImplementation "curse.maven:cloth-config-348521:3782775"
+    //modImplementation "curse.maven:mythicmetals-410127:3725977"
+    //modImplementation "curse.maven:owo-lib-532610:3824297"
+    //modImplementation 'com.github.Draylar:magna:1.7.0-1.18.2'
+
+    modImplementation 'com.ptsmods:devlogin:2.1'
     include "net.devtech:arrp:0.5.7"
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-    // You may need to force-disable transitiveness on them.
+
 }
 
 processResources {
