--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     //modImplementation "curse.maven:continuity-531351:3822250"
 
     //alloygery testing
-    //modImplementation "curse.maven:alloygery-573592:3778894"
-    //modImplementation "curse.maven:nbtcrafting-314633:3707208"
+    modImplementation "curse.maven:alloygery-573592:3778894"
+    modImplementation "curse.maven:nbtcrafting-314633:3707208"
 
 
     //mythicmetals testing
