--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
         }
     }
     mavenLocal()
+    maven { url = "https://minecraft.guntram.de/maven/" }
     maven { url = "https://www.cursemaven.com" }
     maven { url = "https://maven.shedaniel.me/" }
     maven { url = "https://maven.terraformersmc.com/" }
@@ -60,6 +61,9 @@ dependencies {
     modImplementation "curse.maven:alloygery-573592:3778894"
     modImplementation "curse.maven:nbtcrafting-314633:3707208"
 
+    //Therassium testing
+    modImplementation "curse.maven:therassium-554562:3829121"
+    modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
 
     //mythicmetals testing
     //modImplementation "curse.maven:alloy-forgery-438718:3758381"
