Added Forgero tools to banned_uncrafting tag Fixed duplicated tool recipes
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
         }
     }
     mavenLocal()
+    maven { url = "https://modmaven.dev/" }
     maven { url = "https://minecraft.guntram.de/maven/" }
     maven { url = "https://www.cursemaven.com" }
     maven { url = "https://maven.shedaniel.me/" }
@@ -54,16 +55,19 @@ dependencies {
     modImplementation "vazkii.patchouli:Patchouli:1.18.2-67-FABRIC"
     modImplementation("net.devtech:arrp:0.5.7")
 
+    //Twilight forest compat
+    //modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
+
     //continuity testing
     //modImplementation "curse.maven:continuity-531351:3822250"
 
     //alloygery testing
-    modImplementation "curse.maven:alloygery-573592:3778894"
-    modImplementation "curse.maven:nbtcrafting-314633:3707208"
+    //modImplementation "curse.maven:alloygery-573592:3778894"
+    //modImplementation "curse.maven:nbtcrafting-314633:3707208"
 
     //Therassium testing
-    modImplementation "curse.maven:therassium-554562:3829121"
-    modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
+    //modImplementation "curse.maven:therassium-554562:3829121"
+    //modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
 
     //mythicmetals testing
     //modImplementation "curse.maven:alloy-forgery-438718:3758381"
@@ -71,6 +75,15 @@ dependencies {
     //modImplementation "curse.maven:mythicmetals-410127:3725977"
     //modImplementation "curse.maven:owo-lib-532610:3824297"
     //modImplementation 'com.github.Draylar:magna:1.7.0-1.18.2'
+
+    //Polymorph testing
+
+    //modImplementation "curse.maven:cardinal-components-318449:3669769"
+    //modImplementation "curse.maven:cardinal-components-318449:3669770"
+    //modImplementation "curse.maven:cardinal-components-318449:3669771"
+    //modImplementation "curse.maven:cardinal-components-318449:3669774"
+    //modImplementation "curse.maven:cardinal-components-318449:3669773"
+    modImplementation "curse.maven:polymorph-397434:3793108"
 
     modImplementation 'com.ptsmods:devlogin:2.1'
     include "net.devtech:arrp:0.5.7"
