--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    //modImplementation "vazkii.patchouli:Patchouli:1.19.0-69-FABRIC"
+    modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
     modImplementation("net.devtech:arrp:0.6.2")
 
     //Twilight forest compat
