--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "idea"
-    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'fabric-loom' version '0.12.48'
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
