Improving model matching

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -45,7 +45,7 @@ repositories {
 dependencies {
     implementation project(':core')
     implementation project(':forgero-vanilla')
-    implementation project(':forgero-extended')
+    //implementation project(':forgero-extended')
     //implementation project(':common')
 
 
@@ -108,7 +108,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
     // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-    it.options.release = 17
+    //it.options.release = 17
 }
 
 java {
