--- a/forgero-extended/gradle.properties
+++ b/forgero-extended/gradle.properties
@@ -5,7 +5,7 @@ minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.1
 loader_version=0.14.8
 # Mod Properties
-mod_version=0.10.0-BETA-1.19.2
+mod_version=0.10.0-BETA-1.19.2-snapshot-3
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
