--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -48,9 +48,10 @@ dependencies {
     implementation project(':forgero-extended')
     //implementation project(':common')
 
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     implementation 'org.jetbrains:annotations:23.0.0'
-    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
