--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'java'
 }
 
-group 'sigmundgranaas'
+version = rootProject.mod_version
+group = rootProject.maven_group
 
 repositories {
     mavenCentral()
@@ -18,6 +19,14 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+}
+
+processResources {
+    inputs.property "version", rootProject.version
+
+    filesMatching("fabric.mod.json") {
+        expand "version": rootProject.version
+    }
 }
 
 test {
