--- a/forgero-fabric/gradle.properties
+++ b/forgero-fabric/gradle.properties
@@ -6,3 +6,8 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.10
 # Dependencies
 fabric_version=0.64.0+1.19.2
+
+modid=forgero
+mod_version=0.10.0-BETA-1.19.2-snapshot-6
+maven_group=com.sigmundgranaas
+archives_base_name=forgero
