--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -45,9 +45,11 @@ repositories {
 }
 
 dependencies {
+
     implementation project(':core')
-    implementation project(':forgero-vanilla')
-    implementation project(':forgero-extended')
+    modImplementation project(':forgero-fabric')
+    modImplementation project(':forgero-vanilla')
+    modImplementation project(':forgero-extended')
     //implementation project(':common')
 
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
@@ -62,9 +64,9 @@ dependencies {
     modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
     modImplementation("net.devtech:arrp:0.6.2")
 
-    //modImplementation "curse.maven:modmenu-308702:4145207"
-    //modImplementation "curse.maven:lambdynamiclights-393442:3824820"
-    //modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+    modImplementation "curse.maven:modmenu-308702:4145207"
+    modImplementation "curse.maven:lambdynamiclights-393442:3824820"
+    modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
 
     //Twilight forest compat
     //modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
@@ -91,6 +93,7 @@ dependencies {
     include project(':core')
     include project(':forgero-vanilla')
     include project(':forgero-extended')
+    include project(':forgero-fabric')
     //Polymorph testing
 
     //modImplementation "curse.maven:cardinal-components-318449:3669769"
@@ -213,15 +216,6 @@ loom {
 
 
     runs {
-        datagenClient {
-            inherit client
-            name "Data Generation"
-            vmArg "-Dfabric-api.datagen"
-            vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
-            vmArg "-Dfabric-api.datagen.modid=${modid}"
-            runDir "build/datagen"
-        }
-
         testmodServer {
             server()
             ideConfigGenerated project.rootProject == project
