--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -31,6 +31,14 @@ repositories {
     maven { url = "https://api.modrinth.com/maven/" }
     maven { url = 'https://maven.blamejared.com' }
     maven { url = "https://storage.googleapis.com/devan-maven/" }
+    maven {
+        url 'https://kneelawk.com/maven/'
+        name 'Kneelawk Maven'
+    }
+    maven {
+        name = "BuildCraft"
+        url = "https://mod-buildcraft.com/maven"
+    }
 
 
     // Add repositories to retrieve artifacts from in here.
@@ -57,6 +65,15 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
     modImplementation("net.devtech:arrp:0.6.2")
+
+    //Wired redstone compat
+    //modImplementation "curse.maven:wired-redstone-639871:4162194"
+    //modImplementation "curse.maven:fabric-language-kotlin-308769:4123973"
+    //modImplementation("com.kneelawk:graphlib:0.3.4+1.19")
+    //modImplementation("alexiil.mc.lib:libmultipart-all:0.8.0-pre.1.6+kneelawk")
+    //include("alexiil.mc.lib:libmultipart-all::0.8.0-pre.1.6+kneelawk")
+    //modImplementation("com.kneelawk:lmp-compat:0.2.1+1.19")
+
 
     //Twilight forest compat
     //modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
