Created a couple of books to distribute content over several different packages

--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -33,7 +33,7 @@ repositories {
 
 dependencies {
     implementation project(':forgero-core')
-    implementation project(':forgero-vanilla')
+    modImplementation project(':forgero-vanilla')
     implementation project(':forgero-extended')
     implementation project(':forgero-compat')
     //modImplementation project(':forgero-fabric-compat')
@@ -48,13 +48,13 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
+    modImplementation "vazkii.patchouli:Patchouli:1.19.2-77-FABRIC"
     modImplementation("net.devtech:arrp:0.6.2")
 
     include "net.devtech:arrp:0.6.2"
     include project(':forgero-core')
-    include project(':forgero-vanilla')
-    include project(':forgero-extended')
+    //include project(':forgero-vanilla')
+    //include project(':forgero-extended')
     //include project(':forgero-compat')
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
