--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -53,8 +53,8 @@ dependencies {
 
     include "net.devtech:arrp:0.6.2"
     include project(':forgero-core')
-    //include project(':forgero-vanilla')
-    //include project(':forgero-extended')
+    include project(':forgero-vanilla')
+    include project(':forgero-extended')
     //include project(':forgero-compat')
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
