--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "idea"
-    id 'fabric-loom' version '0.12.48'
+    id "fabric-loom" version "1.0.12" apply true
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
@@ -33,7 +33,7 @@ repositories {
 
 dependencies {
     implementation project(':forgero-core')
-    modImplementation project(':forgero-vanilla')
+    implementation project(':forgero-vanilla')
     implementation project(':forgero-extended')
     implementation project(':forgero-compat')
     //modImplementation project(':forgero-fabric-compat')
@@ -47,7 +47,7 @@ dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modApi  "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "vazkii.patchouli:Patchouli:1.19.2-77-FABRIC"
     modImplementation("net.devtech:arrp:0.6.2")
 
