--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ mod_version=0.10.0-BETA-1.19.2-snapshot-8
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
+org.gradle.parallel=true
