Made changes to some patchouli entries

--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     implementation project(':forgero-vanilla')
     implementation project(':forgero-extended')
     implementation project(':forgero-compat')
-    implementation project(':forgero-fabric')
+    implementation project(':forgero-structures')
+    modImplementation project(':forgero-fabric')
 
     //implementation project(':common')
 
