--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "idea"
-    id 'fabric-loom' version '0.12.48'
+    id "fabric-loom" version "1.0.12" apply true
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
@@ -35,7 +35,7 @@ dependencies {
     implementation project(':forgero-extended')
     implementation project(':forgero-compat')
     implementation project(':forgero-structures')
-    modImplementation project(':forgero-fabric')
+    implementation project(':forgero-fabric')
 
     //implementation project(':common')
 
