--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -49,11 +49,14 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
-    modImplementation("net.devtech:arrp:0.6.2")
 
-    modImplementation "curse.maven:modmenu-308702:4145207"
-    modImplementation "curse.maven:lambdynamiclights-393442:3824820"
-    modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+
+    //modImplementation("net.devtech:arrp:0.6.2")
+
+    //dynamiclights compat
+    //modImplementation "curse.maven:modmenu-308702:4145207"
+    //modImplementation "curse.maven:lambdynamiclights-393442:3824820"
+    //modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
 
     //Twilight forest compat
     //modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
@@ -70,13 +73,21 @@ dependencies {
     //modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
 
     //mythicmetals testing
-    //modImplementation "curse.maven:alloy-forgery-438718:3758381"
-    //modImplementation "curse.maven:cloth-config-348521:3782775"
-    //modImplementation "curse.maven:mythicmetals-410127:3725977"
-    //modImplementation "curse.maven:owo-lib-532610:3824297"
-    //modImplementation 'com.github.Draylar:magna:1.7.0-1.18.2'
+    modImplementation "curse.maven:mythicmetals-410127:4118479"
+    modImplementation "curse.maven:alloy-forgery-438718:4073356"
+    annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+    modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
+    modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
+    modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+    modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
+    modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
+    modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
+    include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
+    // Cardinal Components
+    modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+    modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
-    //include "net.devtech:arrp:0.6.2"
+
     //include project(':forgero-core')
     //include project(':forgero-vanilla')
     //include project(':forgero-extended')
