--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -30,12 +30,12 @@ repositories {
 }
 
 dependencies {
-    implementation project(':forgero-core')
-    implementation project(':forgero-vanilla')
-    implementation project(':forgero-extended')
-    implementation project(':forgero-compat')
-    implementation project(':forgero-structures')
-    implementation project(':forgero-fabric')
+    //implementation project(':forgero-core')
+    //implementation project(':forgero-vanilla')
+    //implementation project(':forgero-extended')
+    //implementation project(':forgero-compat')
+    //implementation project(':forgero-structures')
+    modImplementation project(':forgero-fabric')
 
     //implementation project(':common')
 
@@ -55,8 +55,8 @@ dependencies {
 
     //dynamiclights compat
     //modImplementation "curse.maven:modmenu-308702:4145207"
-    //modImplementation "curse.maven:lambdynamiclights-393442:3824820"
-    //modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+    modImplementation "curse.maven:lambdynamiclights-393442:3824820"
+    modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
 
     //Twilight forest compat
     //modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
@@ -75,12 +75,13 @@ dependencies {
     //mythicmetals testing
     modImplementation "curse.maven:mythicmetals-410127:4118479"
     modImplementation "curse.maven:alloy-forgery-438718:4073356"
-    annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
-    modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
-    modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
-    modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
-    modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
-    modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
+    modImplementation "curse.maven:owo-lib-532610:4152949"
+    //annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+    //modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
+    //modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
+    //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+    //modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
+    modApi "curse.maven:modmenu-308702:4145207"
     modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
     include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
     // Cardinal Components
