--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -35,6 +35,16 @@ repositories {
     // for more information about repositories.
 }
 
+configurations {
+    dev {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+}
+artifacts {
+    dev jar
+}
+
 dependencies {
     implementation project(':forgero-core')
     implementation project(':forgero-vanilla')
