--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     modImplementation("net.devtech:arrp:0.6.2")
 
     //dynamiclights compat
-    //modImplementation "curse.maven:modmenu-308702:4145207"
+    modImplementation "curse.maven:modmenu-308702:4145207"
     modImplementation "curse.maven:lambdynamiclights-393442:3824820"
     modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
 
@@ -72,20 +72,20 @@ dependencies {
     //modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
 
     //mythicmetals testing
-    modImplementation "curse.maven:mythicmetals-410127:4118479"
-    modImplementation "curse.maven:alloy-forgery-438718:4073356"
-    modImplementation "curse.maven:owo-lib-532610:4152949"
+    //modImplementation "curse.maven:mythicmetals-410127:4118479"
+    //modImplementation "curse.maven:alloy-forgery-438718:4073356"
+    //modImplementation "curse.maven:owo-lib-532610:4152949"
     //annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
     //modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
     //modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
     //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
     //modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
-    modApi "curse.maven:modmenu-308702:4145207"
-    modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
-    include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
+    //modApi "curse.maven:modmenu-308702:4145207"
+    //modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
+    //include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
     // Cardinal Components
-    modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-    modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+    //modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+    //modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
 
     //include project(':forgero-core')
