--- a/forgero-vanilla/build.gradle
+++ b/forgero-vanilla/build.gradle
@@ -1,11 +1,22 @@
 plugins {
     id 'java'
+    id 'idea'
 }
 version = rootProject.mod_version
 group = rootProject.maven_group
 
 repositories {
     mavenCentral()
+}
+
+configurations {
+    dev {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+}
+artifacts {
+    dev jar
 }
 
 dependencies {
