Put back sourcets for extended testing

--- a/forgero-extended/build.gradle
+++ b/forgero-extended/build.gradle
@@ -31,7 +31,15 @@ processResources {
 
 
 tasks.withType(Test) {
-    
+    sourceSets {
+        test {
+            resources {
+                srcDirs += [
+                        project(':forgero-vanilla').sourceSets.main.resources
+                ]
+            }
+        }
+    }
 }
 
 test {
