Fixing tests and common pipeline setups

--- a/minecraft-common/gradle.properties
+++ b/minecraft-common/gradle.properties
@@ -6,6 +6,6 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.10
 # Dependencies
 fabric_version=0.69.0+1.19.2
-modid=forgero
+modid=forgero-common
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
